2010-03-29 Richard Frith-Macdonald <rfm@gnu.org>

	* config/config.ffi.c: add test for libffi functionality
	* configure.ac: use new test
	* configure: regenerate
	Greg had the good idea of testing libffi version to make sure it
	works ... unfortunately I couldn't see an easy way to test the
	version, so I added a test for functionality adapted from the
	test case I made for the libffi people to demonstrate a bug in
	passing floats on 64bit intel.

2010-03-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDecimalNumber.m: override getter methods of superclass

2010-03-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSException.h:
	Fix typos in last change (spotted by Eddie McCreary).

2010-03-03 Doug Simons <doug.simons@testplant.com>

	* Source/ObjectiveC2/sync.m: Avoid crash on Windows.

2010-03-25 Riccardo Mottola <rmottola@users.sf.net>

	* Source/GSPThread.h
	* Source/NSZone.m
	* Source/ObjectiveC2/sync.m
	* Source/NSLock.m:
	change defines for GNU/HURD

2010-03-23 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSObject.m: Atomic increment and decrement functions for mips
	
2010-03-19 Richard Frith-Macdonald <rfm@gnu.org>

	* config/config.reuseaddr.c:
	* Examples/nsconnection_client.m:
	* Examples/nsconnection_server.m:
	* Headers/Additions/GNUstepBase/GSConfig.h.in:
	* Headers/Additions/GNUstepBase/GSFileHandle.h:
	* Headers/Additions/GNUstepBase/GSVersionMacros.h:
	* Headers/Additions/GNUstepBase/preface.h.in:
	* Headers/Foundation/NSPort.h:
	* Headers/Foundation/NSRunLoop.h:
	* Source/Additions/NSError+GNUstepBase.m:
	* Source/Additions/NSTask+GNUstepBase.m:
	* Source/cifframe.h:
	* Source/GSFileHandle.m:
	* Source/GSHTTPURLHandle.m:
	* Source/GSNetwork.h:
	* Source/GSPortPrivate.h:
	* Source/GSPrivate.h:
	* Source/GSRunLoopCtxt.h:
	* Source/GSRunLoopWatcher.m:
	* Source/GSSocketStream.m:
	* Source/GSStream.m:
	* Source/NSBundle.m:
	* Source/NSCalendarDate.m:
	* Source/NSConnection.m:
	* Source/NSData.m:
	* Source/NSDebug.m: